--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAk1nKPR4uNp-YT2lLJWPZvJEuFWgZSNXo&libraries=places"></script>
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
